<resources>
    <string name="app_name">The Numbers Game</string>
    <string name="home">Home</string>
    <string name="stats">Stats</string>
    <string name="settings">Settings</string>
    <string name="home_stats">Home</string>
    <string name="stats_stats">Stats</string>
    <string name="settings_stats">Settings</string>
    <string name="games_played">Games Played:</string>
    <string name="games_lost">Games Lost:</string>
    <string name="winning_streak">Winning streak:</string>
    <string name="share_on_twitter">Share on Twitter</string>
    <string name="restart">Restart</string>
    <string name="stats_main">Stats</string>
    <string name="settings_main">Settings</string>
    <string name="large">Large</string>
    <string name="small">Small</string>
    <string name="subtract">-</string>
    <string name="divide">/</string>
    <string name="multiply">*</string>
    <string name="clear">C</string>
    <string name="plus">+</string>
    <string name="won">Won:</string>
    <string name="played">Played:</string>
    <string name="lost">Lost</string>
    <string name="streak">Streak:</string>
    <string name="quick_pick">Quick Pick</string>
    <string name="home_Settings">Home</string>
    <string name="stats_Settings">Stats</string>
    <string name="settings_Settings">Settings</string>
    <string name="random_numbers">Random Numbers</string>
    <string name="min">min</string>
    <string name="max">max</string>
    <string name="authorise_twitter">Authorise Twitter</string>
    <string name="save">Save</string>
</resources>