<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingsActivity">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:onClick="homeClicked"
            android:layout_width="match_parent"
            android:layout_margin="2sp"
            android:layout_height="wrap_content"
            android:text="@string/home_Settings"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            tools:ignore="UsingOnClickInXml"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:onClick="statsClicked"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="2sp"
            android:layout_gravity="center_horizontal"
            android:text="@string/stats_Settings"
            tools:ignore="UsingOnClickInXml"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:onClick="settingsClicked"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="2sp"
            android:layout_gravity="center_horizontal"
            android:text="@string/settings_Settings"
            tools:ignore="UsingOnClickInXml"
            style="?android:attr/buttonBarButtonStyle" />
    </TableRow>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="20dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/random_numbers"
        android:textSize="48sp" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/min"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/max"
            android:textSize="20sp" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/min"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number"
            android:textSize="50sp"
            android:text=""
            android:autofillHints="Smallest number"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/max"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number"
            android:textSize="50sp"
            android:text=""
            android:autofillHints="Biggest number"
            tools:ignore="LabelFor" />

    </TableRow>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="20dp" />

    <TextView
        android:text="user"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textAlignment="center"
        android:id="@+id/user_info"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/back"
        tools:ignore="HardcodedText" />


    <Space
        android:layout_width="wrap_content"
        android:layout_height="20dp" />

    <Button
        android:id="@+id/auth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/authorise_twitter"
        tools:ignore="OnClick" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="20dp" />

    <Button
        android:onClick="saveClicked"
        android:layout_margin="2sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        tools:ignore="OnClick,UsingOnClickInXml" />




</androidx.appcompat.widget.LinearLayoutCompat>