<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".StatsActivity">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:onClick="homeClicked"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_stats"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            tools:ignore="UsingOnClickInXml"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:onClick="statsClicked"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            android:text="@string/stats_stats"
            style="?android:attr/buttonBarButtonStyle"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:onClick="settingsClicked"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            android:text="@string/settings_stats"
            style="?android:attr/buttonBarButtonStyle"
            tools:ignore="UsingOnClickInXml" />
    </TableRow>

    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp"/>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="40sp"
            android:text="@string/games_played" />

        <TextView
            android:id="@+id/games_played"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="40sp"
            android:text="" />
    </TableRow>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="40sp"
            android:text="@string/games_won" />

        <TextView
            android:id="@+id/games_won"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="40sp"
            android:text="" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="40sp"
            android:text="@string/games_lost" />

        <TextView
            android:id="@+id/games_lost"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="40sp"
            android:text="" />
    </TableRow>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="40sp"
            android:text="@string/winning_streak" />

        <TextView
            android:id="@+id/streak"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="40sp"
            android:text="" />


    </TableRow>
    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"/>



    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

    <Button
        android:id="@+id/share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/share_on_twitter" />





</androidx.appcompat.widget.LinearLayoutCompat>